[gd_scene load_steps=3 format=3 uid="uid://8k0w0ikl007c"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_gdtir"]
[ext_resource type="FontFile" uid="uid://dfynaome5886n" path="res://ui/kongtext.ttf" id="2_yy6xh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gdtir")

[node name="StartMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -20.0
offset_right = 23.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="StartMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yy6xh")
text = "Start"

[node name="Settings" type="Button" parent="StartMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yy6xh")
text = "Settings"

[node name="Credits" type="Button" parent="StartMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yy6xh")
text = "Credits"

[node name="Quit" type="Button" parent="StartMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yy6xh")
text = "Quit"

[node name="SettingsMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -90.0
offset_right = 161.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeLabel" type="RichTextLabel" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_yy6xh")
text = "Volume
"
fit_content = true

[node name="VolumeSlider" type="HSlider" parent="SettingsMenu"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.5

[node name="ResolutionLabel" type="RichTextLabel" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_yy6xh")
text = "Resolution"
fit_content = true

[node name="Resolution" type="OptionButton" parent="SettingsMenu"]
layout_mode = 2
item_count = 4
selected = 3
popup/item_0/text = "2560x1440"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1366x768"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="DisplayLabel" type="RichTextLabel" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_yy6xh")
text = "Display"
fit_content = true

[node name="Display" type="OptionButton" parent="SettingsMenu"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless Windowed"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2
popup/item_3/text = "Borderless Fullscreen"
popup/item_3/id = 3

[node name="Back" type="Button" parent="SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yy6xh")
text = "Back"

[connection signal="pressed" from="StartMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="StartMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="StartMenu/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="StartMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsMenu/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="item_selected" from="SettingsMenu/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="SettingsMenu/Display" to="." method="_on_display_item_selected"]
[connection signal="pressed" from="SettingsMenu/Back" to="." method="_on_back_pressed"]
